# arch-rust-cli

./: README.md  archetype.toml  archetype.yaml
archetype/{{ name # train_case }}/: Cargo.toml  README.md
archetype/{{ name # train_case }}/src/config/: mod.rs
contents/{{ artifact-id }}/: Cargo.toml
contents/{{ name # train_case }}/src/: lib.rs
